// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login button enabled or disabled snapshot of disabled login button 1`] = `
{
  "0": "font",
  "1": "text-rendering",
  "10": "align-items",
  "11": "cursor",
  "12": "color",
  "13": "padding",
  "14": "border",
  "15": "background-color",
  "16": "box-sizing",
  "17": "border-style",
  "18": "visibility",
  "2": "letter-spacing",
  "3": "word-spacing",
  "4": "line-height",
  "5": "text-transform",
  "6": "text-indent",
  "7": "text-shadow",
  "8": "display",
  "9": "text-align",
  "_importants": {
    "align-items": "",
    "background-color": "",
    "border": "",
    "border-style": "",
    "box-sizing": "",
    "color": "",
    "cursor": "",
    "display": "",
    "font": "",
    "letter-spacing": "",
    "line-height": "",
    "margin": "",
    "padding": "",
    "text-align": "",
    "text-indent": "",
    "text-rendering": "",
    "text-shadow": "",
    "text-transform": "",
    "visibility": undefined,
    "word-spacing": "",
  },
  "_length": 19,
  "_onChange": [Function],
  "_values": {
    "align-items": "flex-start",
    "background-color": "ButtonFace",
    "border": "2px outset buttonface",
    "border-bottom": "2px outset buttonface",
    "border-bottom-color": "buttonface",
    "border-bottom-style": "outset",
    "border-bottom-width": "2px",
    "border-color": "buttonface",
    "border-left": "2px outset buttonface",
    "border-left-color": "buttonface",
    "border-left-style": "outset",
    "border-left-width": "2px",
    "border-right": "2px outset buttonface",
    "border-right-color": "buttonface",
    "border-right-style": "outset",
    "border-right-width": "2px",
    "border-style": "outset",
    "border-top": "2px outset buttonface",
    "border-top-color": "buttonface",
    "border-top-style": "outset",
    "border-top-width": "2px",
    "border-width": "2px",
    "box-sizing": "border-box",
    "color": "GrayText",
    "cursor": "default",
    "display": "inline-block",
    "font": "-webkit-small-control",
    "font-family": "-webkit-small-control",
    "letter-spacing": "normal",
    "line-height": "normal",
    "padding": "2px 6px 3px 6px",
    "padding-bottom": "3px",
    "padding-left": "6px",
    "padding-right": "6px",
    "padding-top": "2px",
    "text-align": "center",
    "text-indent": "0",
    "text-rendering": "auto",
    "text-shadow": "none",
    "text-transform": "none",
    "visibility": "visible",
    "word-spacing": "normal",
  },
}
`;

exports[`Login button enabled or disabled snapshot of enabled login button 1`] = `
{
  "0": "font",
  "1": "text-rendering",
  "10": "align-items",
  "11": "cursor",
  "12": "color",
  "13": "padding",
  "14": "border",
  "15": "background-color",
  "16": "box-sizing",
  "17": "border-style",
  "18": "visibility",
  "2": "letter-spacing",
  "3": "word-spacing",
  "4": "line-height",
  "5": "text-transform",
  "6": "text-indent",
  "7": "text-shadow",
  "8": "display",
  "9": "text-align",
  "_importants": {
    "align-items": "",
    "background-color": "",
    "border": "",
    "border-style": "",
    "box-sizing": "",
    "color": "",
    "cursor": "",
    "display": "",
    "font": "",
    "letter-spacing": "",
    "line-height": "",
    "margin": "",
    "padding": "",
    "text-align": "",
    "text-indent": "",
    "text-rendering": "",
    "text-shadow": "",
    "text-transform": "",
    "visibility": undefined,
    "word-spacing": "",
  },
  "_length": 19,
  "_onChange": [Function],
  "_values": {
    "align-items": "flex-start",
    "background-color": "ButtonFace",
    "border": "2px outset buttonface",
    "border-bottom": "2px outset buttonface",
    "border-bottom-color": "buttonface",
    "border-bottom-style": "inset",
    "border-bottom-width": "2px",
    "border-color": "buttonface",
    "border-left": "2px outset buttonface",
    "border-left-color": "buttonface",
    "border-left-style": "inset",
    "border-left-width": "2px",
    "border-right": "2px outset buttonface",
    "border-right-color": "buttonface",
    "border-right-style": "inset",
    "border-right-width": "2px",
    "border-style": "inset",
    "border-top": "2px outset buttonface",
    "border-top-color": "buttonface",
    "border-top-style": "inset",
    "border-top-width": "2px",
    "border-width": "2px",
    "box-sizing": "border-box",
    "color": "ButtonText",
    "cursor": "default",
    "display": "inline-block",
    "font": "-webkit-small-control",
    "font-family": "-webkit-small-control",
    "letter-spacing": "normal",
    "line-height": "normal",
    "padding": "2px 6px 3px 6px",
    "padding-bottom": "3px",
    "padding-left": "6px",
    "padding-right": "6px",
    "padding-top": "2px",
    "text-align": "center",
    "text-indent": "0",
    "text-rendering": "auto",
    "text-shadow": "none",
    "text-transform": "none",
    "visibility": "visible",
    "word-spacing": "normal",
  },
}
`;
